# soilprofilecollection

./: .gitignore  .readthedocs.yaml  Makefile  NEWS.md  README.Rmd  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: pypi-release.yml  test.yml
docs/: index.md  requirements.txt
soilprofilecollection/: soil_profile_collection.py
tests/: test-soil_profile_collection.py  test_soilprofilecollection.py
