[tool.poetry]
name = "soilprofilecollection"
version = "0.3.1"
description = "A 'Python' implementation of the 'SoilProfileCollection' object from the 'R' package 'aqp'"
authors = ["Andrew Gene Brown <brown.andrewg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
pandas = "^2.2.3"
numpy = "^2.2.4"
matplotlib = {version = "^3.10.1", optional = true}

[tool.poetry.extras]
plot = ["matplotlib"]

[tool.poetry.group.dev.dependencies]
pytest = ">=8,<10"
mkdocstrings-python = "^1.16.8"
ruff = "^0.12.0"
mypy = "^1.15.0"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
